--- a/package.json
+++ b/package.json
@@ -10,9 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/new-app-screen": "^0.80.1",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
+    "lottie-react-native": "^7.2.4",
+    "nativewind": "^4.1.23",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "@react-native/new-app-screen": "0.80.1"
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-get-location": "^5.0.0",
+    "react-native-immersive": "^2.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-loader-kit": "^3.0.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.13.1",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-wifi-reborn": "^4.13.6",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -30,7 +49,6 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
     "typescript": "5.0.4"
   },
