--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native/new-app-screen": "^0.80.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
@@ -19,7 +20,6 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-get-location": "^5.0.0",
     "react-native-immersive": "^2.0.0",
